--- a/css/style.css
+++ b/css/style.css
@@ -304,6 +304,61 @@ body {
     font-size: 4rem;
     font-weight: 300; }
 
+.story {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.3);
+  padding: 4rem;
+  font-size: 1.6rem;
+  transform: skewX(-10deg);
+  background: #fff; }
+  .story > * {
+    transform: skewX(10deg); }
+  .story__shape {
+    width: 10rem;
+    height: 10rem;
+    float: left;
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    shape-outside: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    transform: translateX(-2rem) skewX(10deg);
+    position: relative; }
+  .story__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    color: #ffff;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 1.6rem;
+    opacity: 0;
+    transition: all .5s; }
+  .story:hover .story__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%); }
+  .story__img {
+    height: 100%;
+    transform: translateX(-2rem) scale(1.2);
+    transition: all .5s; }
+  .story:hover .story__img {
+    transform: translateX(-2rem);
+    filter: blur(1px) brightness(80%); }
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: .3;
+  overflow: hidden; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
@@ -369,5 +424,9 @@ body {
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 20rem 0 10rem 0;
+  padding: 20rem 0 6rem 0;
   margin-top: -10rem; }
+
+.section-stories {
+  padding: 6rem 0;
+  position: relative; }
