--- a/sass/page/_home.scss
+++ b/sass/page/_home.scss
@@ -20,6 +20,10 @@
 
 .section-tours{
     background-color: $color-grey-light;
-    padding: 20rem 0 10rem 0;
+    padding: 20rem 0 6rem 0;
     margin-top: -10rem;
+}
+.section-stories{
+    padding: 6rem 0;
+    position: relative;
 }
