--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import './components/card'; 
 @import './components/story'; 
 @import './components/video'; 
+@import './components/form'; 
 
 @import './layout/header';
 @import './layout/grid';
