--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,12 +1,12 @@
 .u-center-text{
-    text-align: center;
+    text-align: center !important;
 }
 .u-margin-bottom-big{
-    margin-bottom: 5rem;
+    margin-bottom: 5rem !important;
 }
 .u-margin-bottom-small{
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.5rem !important;
 }
 .u-margin-bottom-mid{
-    margin-bottom: 2.5rem;
+    margin-bottom: 2.5rem !important;
 }
