--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,5 +1,5 @@
 .btn{
-    &:link, &:visited{
+    &,&:link, &:visited{
         text-transform: capitalize;
         text-decoration: none;
         padding: 1.5rem 3.5rem;
@@ -8,7 +8,11 @@
         transition: all .2s;
         position: relative;
         font-size: 1.6rem;
+        border: none;
+        cursor: pointer;
     }
+
+
     &--white{
         background: #fff;
         color: $color-grey-text;
@@ -32,7 +36,8 @@
             opacity: 0;
         }
     }
-    &:active{
+    &:active,&:focus{
+        outline: none;
         transform: translateY(-2px);
         box-shadow: 0 .5rem 1rem rgba($color-black,0.2);
     }
