--- a/css/style.css
+++ b/css/style.css
@@ -483,6 +483,44 @@ body {
   .row .col-3-of-4 {
     width: calc(3*(100% - 3* 5rem)/4 + 2*5rem); }
 
+.footer {
+  background-color: #333;
+  padding: 7rem 0 5rem 0; }
+  .footer__logo-box {
+    text-align: center;
+    margin-bottom: 5rem; }
+  .footer__logo {
+    width: 10rem;
+    height: auto; }
+  .footer__navigation {
+    border-top: 1px solid #ccc;
+    padding-top: 2rem;
+    display: inline-block; }
+  .footer__list {
+    list-style: none; }
+  .footer__item {
+    display: inline-block;
+    margin-left: 1.5rem; }
+  .footer__link {
+    transition: all .1s; }
+    .footer__link:visited, .footer__link:link {
+      text-decoration: none;
+      color: #f7f7f7;
+      text-transform: uppercase;
+      display: inline-block;
+      background-color: #333; }
+    .footer__link:hover, .footer__link:active {
+      color: #55c57a;
+      box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+      transform: rotate(5deg) scale(1.3); }
+  .footer__copyright {
+    border-top: 1px solid #ccc;
+    padding-top: 2rem;
+    width: 80%;
+    float: right;
+    color: #f7f7f7;
+    font-size: 1.2rem; }
+
 .section-about {
   background-color: #f7f7f7;
   padding: 22rem 0 18rem 0;
