--- a/css/style.css
+++ b/css/style.css
@@ -521,6 +521,117 @@ body {
     color: #f7f7f7;
     font-size: 1.2rem; }
 
+.navigation__checkbox {
+  display: none; }
+
+.navigation__btn {
+  background-color: #ffff;
+  height: 6rem;
+  width: 6rem;
+  border-radius: 50%;
+  position: fixed;
+  top: 4rem;
+  right: 4rem;
+  z-index: 201;
+  box-shadow: 0 1rem 2.5rem rgba(0, 0, 0, 0.3);
+  text-align: center;
+  cursor: pointer; }
+
+.navigation__background {
+  height: 5rem;
+  width: 5rem;
+  border-radius: 50%;
+  position: fixed;
+  top: 4.5rem;
+  right: 4.5rem;
+  background-image: radial-gradient(#7ed56f, #28b485);
+  z-index: 100;
+  transition: all .6s ease; }
+
+.navigation__nav {
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 150;
+  opacity: 0;
+  width: 0;
+  transition: all .6s ease; }
+
+.navigation__list {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  text-align: center; }
+
+.navigation__item {
+  margin: 1.2rem; }
+
+.navigation__link {
+  color: #f7f7f7;
+  display: inline-block; }
+  .navigation__linkspan {
+    margin-right: 4px; }
+  .navigation__link:link, .navigation__link :visited {
+    font-size: 2.5rem;
+    font-weight: 400;
+    text-decoration: none;
+    color: #f7f7f7;
+    padding: .8rem 1.5rem;
+    text-transform: uppercase;
+    background-image: linear-gradient(120deg, transparent 50%, white 50%);
+    background-size: 230%;
+    transition: all .5s; }
+  .navigation__link:hover, .navigation__link:active {
+    background-position: 100%;
+    color: #28b485;
+    transform: translateX(5px); }
+
+.navigation__checkbox:checked ~ .navigation__background {
+  transform: scale(80); }
+
+.navigation__checkbox:checked ~ .navigation__nav {
+  opacity: 1;
+  width: 100vw; }
+
+.navigation__icon {
+  margin-top: 3rem;
+  position: relative; }
+  .navigation__icon, .navigation__icon::before, .navigation__icon::after {
+    width: 2.5rem;
+    height: 1px;
+    background-color: #333;
+    display: inline-block; }
+  .navigation__icon::before, .navigation__icon::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    transition: all .2s; }
+  .navigation__icon::before {
+    top: -.8rem; }
+  .navigation__icon::after {
+    top: .8rem; }
+
+.navigation__btn:hover .navigation__icon::before {
+  top: -1rem; }
+
+.navigation__btn:hover .navigation__icon::after {
+  top: 1rem; }
+
+.navigation__checkbox:checked ~ .navigation__btn .navigation__icon {
+  background-color: transparent; }
+
+.navigation__checkbox:checked ~ .navigation__btn .navigation__icon::after {
+  top: 0;
+  transform: rotate(135deg); }
+
+.navigation__checkbox:checked ~ .navigation__btn .navigation__icon::before {
+  top: 0;
+  transform: rotate(-135deg); }
+
 .section-about {
   background-color: #f7f7f7;
   padding: 22rem 0 18rem 0;
