--- a/sass/abstruct/_mixin.scss
+++ b/sass/abstruct/_mixin.scss
@@ -5,3 +5,20 @@
         clear: both;
     }
 }
+
+// phone-600 , tab-port : 900 , tab-land:1200,big-desktop:1800;
+
+@mixin respond($breakpoint) {
+    @if $breakpoint == phone {
+        @media (max-width:37.5em) { @content }; //600px;
+    }
+    @if $breakpoint == tab-port {
+        @media (max-width:56.25em) { @content }; //900px
+    }
+    @if $breakpoint == tab-land {
+        @media (max-width:75em) { @content }; //1200px
+    }
+    @if $breakpoint == big-desktop {
+        @media (max-width:112.5em) { @content }; //1800
+    }
+}
