--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -13,6 +13,11 @@
         opacity: 1;
         visibility: visible;
     }
+    &:target &__content{
+        opacity: 1;
+        transform: translate(-50%,-50%) scale(1);
+
+    }
     &__close{
         color: #333;
         &:link,
@@ -36,11 +41,12 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%,-50%);
         box-shadow: 0 2rem 4rem rgba($color: #000000, $alpha: .3);
         border-radius: 2px;
         display: table;
-        overflow: hidden;
+         overflow: hidden;
+        transform: translate(-50%,-50%) scale(.3);
+        transition: all .4s;
     }
     &__left{
         width: 33.333333%;
