--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,6 +3,7 @@
     text-transform: uppercase;
     backface-visibility: hidden;
     margin-bottom: 3rem;
+   
     &--main{
         display: block;
         font-size: 5.5rem;
@@ -10,6 +11,10 @@
         letter-spacing: 3.5rem;
         animation-name: moveInLeft;
         animation-duration: 1s;
+        @include respond(phone){
+            letter-spacing: 1.8rem;
+            font-size: 5rem;
+        }
     }
     &--sub{
         display: block;
@@ -30,6 +35,9 @@
     -webkit-background-clip: text;
     color: transparent;
     transition: all .2s;
+    @include respond(phone){
+        font-size: 2.5rem;
+    }
     &:hover{
         transform: skew(10deg,2deg) scale(1.05);
         text-shadow: .5rem 1rem 2rem rgba(#000000,.2);
@@ -39,10 +47,16 @@
 .heading-tertiary{
     font-size: 1.8rem;
     font-weight: 700;
+    @include respond(tab-port){
+        font-size: 2.2rem;
+    }
     text-transform: uppercase;
 }
 .paragraph{
     font-size: 1.5rem;
+    @include respond(tab-port){
+        font-size: 2rem;
+    }
     &:not(:last-child){
         margin-bottom: 3rem;
     }
