--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,9 @@
 .footer{
     background-color: #333;
     padding: 7rem 0 5rem 0;
-
+    @include respond(phone){
+        padding: 5rem 0 3rem 0;
+    }
     &__logo-box{
        text-align: center;
        margin-bottom: 5rem;
@@ -14,6 +16,13 @@
         border-top: 1px solid #ccc;
         padding-top: 2rem;
         display: inline-block;
+        @include respond(tab-port){
+        width: 100%;
+        text-align: center;
+        font-size: 1.7rem;
+        border-top: none;
+
+        }
     }
     &__list{
         list-style: none;
@@ -46,5 +55,10 @@
         float: right;
         color: #f7f7f7;
         font-size: 1.2rem;
+        @include respond(tab-port){
+          font-size: 1.7rem;
+          text-align: center;
+          width: 100%;
+            }
     }
 }
