--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,6 +4,10 @@
     background-size: cover;
     background-position: top;
     clip-path: polygon(0 0,100% 0,100% 75vh,0 100%);
+    @include respond(phone){
+        clip-path: polygon(0 0,100% 0,100% 85vh,0 100%);
+
+     }
     position: relative;
     &__logo-box{
         position: absolute;
