--- a/sass/page/_home.scss
+++ b/sass/page/_home.scss
@@ -2,10 +2,17 @@
     background-color: $color-grey-light;
     padding: 22rem 0 18rem 0;
     margin-top: -20vh;
+    @include respond(phone){
+    margin-top: -15vh;
+    
+    }
 }
 .section-features{
     background-color: $color-grey-light;
     padding: 18rem 0;
+    @include respond(phone){
+        padding: 15rem 0;
+        }
     background-image: linear-gradient(to right bottom,rgba($color-primary-light, 0.8),rgba($color-primary-dark,0.8)),url(../img/nat-4.jpg);
     background-size: cover;
     background-position: top;
