--- a/css/style.css
+++ b/css/style.css
@@ -209,15 +209,34 @@ body {
     z-index: 10;
     transition: all 0.2s;
     outline-offset: 1.2rem; }
+    @media (max-width: 56.25em) {
+      .composition__photo {
+        float: left;
+        position: relative;
+        width: 33.3333%;
+        box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); } }
     .composition__photo--p1 {
       left: 0;
       top: -2rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p1 {
+          top: 1rem;
+          transform: scale(1.2); } }
     .composition__photo--p2 {
-      right: 0;
-      top: 2rem; }
+      right: 0; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p2 {
+          top: -1rem;
+          transform: scale(1.3);
+          z-index: 100; } }
     .composition__photo--p3 {
       left: 20%;
       top: 10rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p3 {
+          top: 0;
+          left: 0;
+          transform: scale(1.1); } }
     .composition__photo:hover {
       transform: scale(1.07);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
@@ -234,6 +253,12 @@ body {
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: all .2s; }
+  @media (max-width: 56.25em) {
+    .feature-box {
+      font-size: 1.8rem; } }
+  @media (max-width: 37.5em) {
+    .feature-box {
+      font-size: 2.3rem; } }
   .feature-box__icon {
     font-size: 4rem;
     margin-bottom: .5rem;
@@ -241,6 +266,12 @@ body {
     display: inline-block;
     -webkit-background-clip: text;
     color: transparent; }
+    @media (max-width: 56.25em) {
+      .feature-box__icon {
+        font-size: 5rem; } }
+    @media (max-width: 37.5em) {
+      .feature-box__icon {
+        font-size: 6rem; } }
   .feature-box:hover {
     transform: translateY(5px) scale(1.1); }
 
@@ -249,6 +280,12 @@ body {
   perspective: 150rem;
   position: relative;
   height: 40rem; }
+  @media (max-width: 56.25em) {
+    .card {
+      height: 50rem; } }
+  @media (max-width: 37.5em) {
+    .card {
+      height: 55rem; } }
   .card__side {
     background-color: orangered;
     height: 40rem;
@@ -261,6 +298,12 @@ body {
     border-radius: 3px;
     overflow: hidden;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+    @media (max-width: 56.25em) {
+      .card__side {
+        height: 50rem; } }
+    @media (max-width: 37.5em) {
+      .card__side {
+        height: 55rem; } }
     .card__side--front {
       background-color: #ffff; }
     .card__side--back {
@@ -281,6 +324,9 @@ body {
     background-blend-mode: screen;
     -webkit-background-clip: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+    @media (max-width: 56.25em) {
+      .card__picture {
+        height: 25rem; } }
     .card__picture-1 {
       background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url("../../img/nat-5.jpg"); }
     .card__picture-2 {
@@ -297,6 +343,13 @@ body {
     right: 2rem;
     text-align: right;
     width: 75%; }
+    @media (max-width: 56.25em) {
+      .card__heading {
+        top: 17rem;
+        font-size: 3rem; } }
+    @media (max-width: 37.5em) {
+      .card__heading {
+        font-size: 3.4rem; } }
     .card__heading-span {
       padding: .5rem .7rem;
       -webkit-box-decoration-break: clone;
@@ -315,6 +368,12 @@ body {
       font-size: 1.3rem;
       text-align: center;
       padding: .8rem; }
+      @media (max-width: 56.25em) {
+        .card__details ul li {
+          font-size: 1.8rem; } }
+      @media (max-width: 37.5em) {
+        .card__details ul li {
+          font-size: 2.3rem; } }
       .card__details ul li:not(:last-child) {
         border-bottom: 1px solid #eee; }
   .card__cta {
@@ -331,9 +390,21 @@ body {
   .card__price-only {
     font-size: 1.4rem;
     text-transform: uppercase; }
+    @media (max-width: 56.25em) {
+      .card__price-only {
+        font-size: 1.8rem; } }
+    @media (max-width: 37.5em) {
+      .card__price-only {
+        font-size: 2rem; } }
   .card__price-value {
     font-size: 4rem;
     font-weight: 300; }
+    @media (max-width: 56.25em) {
+      .card__price-value {
+        font-size: 4.5rem; } }
+    @media (max-width: 37.5em) {
+      .card__price-value {
+        font-size: 5rem; } }
 
 .story {
   width: 75%;
