--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -3,9 +3,21 @@
     perspective: 150rem;
     position: relative;
     height: 40rem;
+    @include respond(tab-port){
+        height: 50rem;
+    }
+    @include respond(phone){
+        height: 55rem;
+    }
     &__side{
         background-color: orangered;
         height: 40rem;
+        @include respond(tab-port){
+            height: 50rem;
+        }
+        @include respond(phone){
+            height: 55rem;
+        }
         transition: all .8s;
         position: absolute;
         top: 0;
@@ -45,6 +57,9 @@
 
     &__picture{
         height: 20rem;
+        @include respond(tab-port){
+            height: 25rem;
+        }
         background-size: cover;
         background-blend-mode: screen;
         -webkit-background-clip: polygon(0 0,100% 0,100% 85%,0 100%);
@@ -66,6 +81,13 @@
         text-transform: uppercase;
         position: absolute;
         top: 12rem;
+        @include respond(tab-port){
+            top: 17rem;
+            font-size: 3rem;
+        }
+        @include respond(phone){
+            font-size: 3.4rem;
+        }
         right: 2rem;
         text-align: right;
         width: 75%;
@@ -91,6 +113,12 @@
          margin: 1rem auto;
             li{
                 font-size: 1.3rem;
+                @include respond(tab-port){
+                    font-size: 1.8rem;
+                }
+                @include respond(phone){
+                    font-size: 2.3rem;
+                }
                 text-align: center;
                 padding: .8rem;
                 &:not(:last-child){
@@ -115,9 +143,22 @@
     &__price-only{
             font-size: 1.4rem;
             text-transform: uppercase;
+            @include respond(tab-port){
+                font-size: 1.8rem;
+            }
+            @include respond(phone){
+                font-size: 2rem;
+            }
+            
     }
     &__price-value{
             font-size: 4rem;
             font-weight: 300;
+            @include respond(tab-port){
+                font-size: 4.5rem;
+            }
+            @include respond(phone){
+                font-size: 5rem;
+            }
     }
 }
