--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -5,9 +5,20 @@
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba(#0000, .15);
     transition: all .2s;
-
+    @include respond(tab-port){
+        font-size: 1.8rem;
+    }
+    @include respond(phone){
+        font-size: 2.3rem;
+    }
     &__icon{
         font-size: 4rem;
+        @include respond(tab-port){
+            font-size: 5rem;
+        }
+        @include respond(phone){
+            font-size: 6rem;
+        }
         margin-bottom: .5rem;
         background-image: linear-gradient(to right,$color-primary,$color-primary-dark);
     display: inline-block;
