--- a/sass/page/_home.scss
+++ b/sass/page/_home.scss
@@ -44,12 +44,20 @@
                  transparent 50%)
                     ,url('../../img/nat-10.jpg');
     background-size: cover;
-    height: 50rem;
     border-radius: 3px;
     box-shadow: 0 1.4rem 3rem rgba($color: #0000, $alpha: .3);
-
+    @include respond(tab-port){
+        background-image: linear-gradient(105deg,rgba(255,255,255,.8) 0%,
+        rgba(255,255,255,.9) 65%,
+        transparent 65%)
+           ,url('../../img/nat-10.jpg');
+    }
     &__form{
         width: 50%;
         padding: 3rem;
+        @include respond(tab-port){
+            width: 65%;
+        }
     }
+    
 }
