--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -65,13 +65,13 @@
         -webkit-background-clip: polygon(0 0,100% 0,100% 85%,0 100%);
         clip-path: polygon(0 0,100% 0,100% 85%,0 100%);
         &-1{
-            background-image:  linear-gradient(to right bottom,$color-secondary-light,$color-secondary-dark),url('../../img/nat-5.jpg');
+            background-image:  linear-gradient(to right bottom,$color-secondary-light,$color-secondary-dark),url('./img/nat-5.jpg');
         }
         &-2{
-            background-image: linear-gradient(to right bottom,$color-primary-light,$color-primary-dark),url('../../img/nat-7.jpg');
+            background-image: linear-gradient(to right bottom,$color-primary-light,$color-primary-dark),url('./img/nat-7.jpg');
         }
         &-3{
-            background-image: linear-gradient(to right bottom,$color-tertiary-light,$color-tertiary-dark),url('../../img/nat-6.jpg');
+            background-image: linear-gradient(to right bottom,$color-tertiary-light,$color-tertiary-dark),url('./img/nat-6.jpg');
         }
     }
     &__heading{
