--- a/css/style.css
+++ b/css/style.css
@@ -328,11 +328,11 @@ body {
       .card__picture {
         height: 25rem; } }
     .card__picture-1 {
-      background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url("./img/nat-5.jpg"); }
+      background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/nat-5.jpg); }
     .card__picture-2 {
-      background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url("./img/nat-7.jpg"); }
+      background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url(../img/nat-7.jpg); }
     .card__picture-3 {
-      background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url("./img/nat-6.jpg"); }
+      background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url(../img/nat-6.jpg); }
   .card__heading {
     font-size: 2.3rem;
     font-weight: 400;
@@ -860,13 +860,13 @@ body {
   background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
 
 .book {
-  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url("./img/nat-10.jpg");
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(./img/nat-10.jpg);
   background-size: cover;
   border-radius: 3px;
   box-shadow: 0 1.4rem 3rem rgba(0, 0, 0, 0.3); }
   @media (max-width: 56.25em) {
     .book {
-      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 65%), url("./img/nat-10.jpg"); } }
+      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 65%), url(../img/nat-10.jpg); } }
   .book__form {
     width: 50%;
     padding: 3rem; }
