--- a/sass/page/_home.scss
+++ b/sass/page/_home.scss
@@ -42,7 +42,7 @@
     background-image: linear-gradient(105deg,rgba(255,255,255,.8) 0%,
                  rgba(255,255,255,.9) 50%,
                  transparent 50%)
-                    ,url(./img/nat-10.jpg);
+                    ,url(../img/nat-10.jpg);
     background-size: cover;
     border-radius: 3px;
     box-shadow: 0 1.4rem 3rem rgba($color: #0000, $alpha: .3);
